--- a/source_code/index.html
+++ b/source_code/index.html
@@ -23,7 +23,7 @@
     .bg { 
         min-height: 100vh;
         width: 100%;
-        background-image: url(/OWASP/source_code/design-an-attractive-background-for-your-website.jpg);
+        background-image: url(/source_code/Background image.jpg);
         background-position:center;
         background-size:cover;
         position: absolute;
