--- a/challenges/source_code/index.html
+++ b/challenges/source_code/index.html
@@ -23,7 +23,7 @@
     .bg { 
         min-height: 100vh;
         width: 100%;
-        background-image: url(/Background image.jpg);
+        background-image: url(/Background_image.jpg);
         background-position:center;
         background-size:cover;
         position: absolute;
