encrypted the passkey

--- a/challenges/Steganography_CTF/Steg.html
+++ b/challenges/Steganography_CTF/Steg.html
@@ -10,7 +10,8 @@
               margin-right: auto;
             }
         </style>
-        <!--Steg_CTF_256-->
+        <!--Shift of 2-->
+        <!--RCUUM GAHQT VJGUV GICPQ ITCRJ AFGET ARVKQ PKUUV GIEVH-->
         
     </head>
     <body>
