--- a/challenges/level_2/index.html
+++ b/challenges/level_2/index.html
@@ -13,7 +13,7 @@
     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.imgflip.com%2Fzl4hy.jpg&f=1&nofb=1" alt="Image not found" style="float: left; width: 32.5%; padding: 5px;"></a>
     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.imgflip.com%2Fzl4hy.jpg&f=1&nofb=1" alt="Image not found" style="float: left; width: 32.5%; padding: 5px;"></a>
     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.imgflip.com%2Fzl4hy.jpg&f=1&nofb=1" alt="Image not found" style="float: left; width: 32.5%; padding: 5px;"></a>
-    <a href="http://localhost/y.php"><img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.imgflip.com%2Fzl4hy.jpg&f=1&nofb=1" alt="Image not found" style="float: left; width: 32.5%; padding: 5px;"></a>
+    <a href="http://localhost/level_2/y.php"><img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.imgflip.com%2Fzl4hy.jpg&f=1&nofb=1" alt="Image not found" style="float: left; width: 32.5%; padding: 5px;"></a>
     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.imgflip.com%2Fzl4hy.jpg&f=1&nofb=1" alt="Image not found" style="float: left; width: 32.5%; padding: 5px;"></a>
 
 
