--- a/challenges/level_13/index.html
+++ b/challenges/level_13/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
   <h1>Harder XSS</h1>
-  <form action="http://localhost/x.php" method="GET">
+  <form action="http://localhost/level_13/x.php" method="GET">
     User the string <b>alert(FLAG)</b> <br>
     <input name="name"><br><br>
     <button type="submit">Check</button>
