Added favicons to all the pages+added index.html

--- a/challenges/level_10/index.html
+++ b/challenges/level_10/index.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="http://localhost/NATAS 6--7/index.css">	
-        
+<!-- Favicon -->
+<link rel="icon" href="../images/owasp-logo.png">      
         <style>
             img {
               display: block;
