--- a/challenges/level_11/flagsearchneedle.html
+++ b/challenges/level_11/flagsearchneedle.html
@@ -1,6 +1,8 @@
 <html>
 <head>
 </head>
+<!-- Favicon -->
+<link rel="icon" href="../images/owasp-logo.png">
 <body>
 <h1>You're very close to the finish line!</h1>
 <?php
