--- a/challenges/level_13/index.html
+++ b/challenges/level_13/index.html
@@ -1,6 +1,8 @@
 <html>
 <head>
   <title>x</title>
+<!-- Favicon -->
+<link rel="icon" href="../images/owasp-logo.png">
 </head>
 <body>
   <h1>Harder XSS</h1>
