--- a/challenges/level_4/index.html
+++ b/challenges/level_4/index.html
@@ -4,6 +4,11 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>Apache2 Debian Default Page: It works</title>
+
+<!-- Favicon -->
+<link rel="icon" href="../images/owasp-logo.png">
+
+
     <style type="text/css" media="screen">
   * {
     margin: 0px 0px 0px 0px;
