--- a/challenges/level_10/success.html
+++ b/challenges/level_10/success.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="index.css">	
-        
+<!-- Favicon -->
+<link rel="icon" href="../images/owasp-logo.png">        
         <style>
             img {
               display: block;
