--- a/challenges/level_2/index.html
+++ b/challenges/level_2/index.html
@@ -2,6 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+<!-- Favicon -->
+<link rel="icon" href="../images/owasp-logo.png">
     <title>Image</title>
     <h1 align="center">Find the next flag</h1>
   </head>
