--- a/challenges/level_3/index.html
+++ b/challenges/level_3/index.html
@@ -10,7 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Jura:wght@700&display=swap" rel="stylesheet">
 
     <title>WASPCON</title>
-
+<!-- Favicon -->
+<link rel="icon" href="../images/owasp-logo.png">
     <!--css-->
 
     <style>
