--- a/challenges/level_6/index.html
+++ b/challenges/level_6/index.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="http://localhost/Beginner_CTF/Steg.css">	
-        
+<!-- Favicon -->
+<link rel="icon" href="../images/owasp-logo.png">        
         <style>
             img {
               display: block;
