--- a/challenges/level_9/index.html
+++ b/challenges/level_9/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Login Page</title>
+<!-- Favicon -->
+<link rel="icon" href="../images/owasp-logo.png">
     <style>
       Body {
         font-family: Calibri, Helvetica, sans-serif;
