--- a/challenges/level_6/index.html
+++ b/challenges/level_6/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="http://localhost/Beginner_CTF/Steg.css">	
+        <link rel="stylesheet" type="text/css" href="./Steg.css">	
 <!-- Favicon -->
 <link rel="icon" href="../images/owasp-logo.png">        
         <style>
@@ -24,7 +24,7 @@
                     <i class="fa fa-key" aria-hidden="true"></i>
                 </div>
                 <section class = "text-center col-12">
-                    <p><img src="http://localhost/Beginner_CTF/Steg_CTF-encoded.png" class = "center" style="width:300px;height:300px;"  ></p>
+                    <p><img src="./Steg_CTF-encoded.png" class = "center" style="width:300px;height:300px;"  ></p>
                 </section>
                 <div class="col-lg-12 login-title">
                     OWASP VITCC
@@ -32,7 +32,7 @@
 
                 <div class="col-lg-12 login-form">
                     <div class="col-lg-12 login-form">
-                        <form method = "GET" action = "http://localhost/Beginner_CTF/Steg.php">
+                        <form method = "GET" action = "./Steg.php">
                             <div class="form-group">
                                 <label class="form-control-label">USERNAME</label>
                                 <input type="text" required name = "username" class="form-control">
