updated flag for  level 6

--- a/challenges/level_6/Steg_success.html
+++ b/challenges/level_6/Steg_success.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="Steg.css">	
+        <link rel="stylesheet" type="text/css" href="./Steg.css">	
         
         <style>
             img {
@@ -34,7 +34,7 @@
                     Congratulations !!!!</br>
                     You have completed the level</br>
                     Heres your flag</br>
-                    {Beginner_CTF_stg1729}
+                    WASP{CTF_stg1729}
                     
                 </div.a>
                 <div class="col-lg-3 col-md-2"></div>
