--- a/challenges/level_10/index.html
+++ b/challenges/level_10/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="http://localhost/NATAS 6--7/index.css">	
+        <link rel="stylesheet" type="text/css" href="./index.css">	
 <!-- Favicon -->
 <link rel="icon" href="../images/owasp-logo.png">      
         <style>
@@ -23,7 +23,7 @@
                     <i class="fa fa-key" aria-hidden="true"></i>
                 </div>
                 <section class = "text-center col-12">
-                    <p><img src="http://localhost/NATAS 6--7/Steg_CTF-encoded.png" class = "center" style="width:300px;height:300px;"  ></p>
+                    <p><img src="./Steg_CTF-encoded.png" class = "center" style="width:300px;height:300px;"  ></p>
                 </section>
                 <div class="col-lg-12 login-title">
                     OWASP VITCC
