--- a/challenges/level_2/index.html
+++ b/challenges/level_2/index.html
@@ -2,10 +2,16 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+<!-- Fonts -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap" rel="stylesheet">
+
+
 <!-- Favicon -->
 <link rel="icon" href="../images/owasp-logo.png">
     <title>Image</title>
-    <h1 align="center">Find the next flag</h1>
+    <h1 style="text-align:center; font-family: 'Kanit', sans-serif; font-size: 4rem;">Find the next flag</h1>
   </head>
   <body>
     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.imgflip.com%2Fzl4hy.jpg&f=1&nofb=1" alt="Image not found" style="float: left; width: 32.5%; padding: 5px;"></a>
