--- a/challenges/index.html
+++ b/challenges/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WASPCON</title>
+<!-- Fonts -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap" rel="stylesheet">
 <!-- Favicon -->
 
 <link rel="icon" href="images/owasp-logo.png">
@@ -16,13 +20,26 @@
         margin:0;
         padding:0;
         box-sizing: border-box;
+        position: absolute;
+        font-family: 'Kanit', sans-serif;
+        background-image: url(./images/hacker1.jpg);
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        min-height: 100vh;
     }
 
     .heading{
-        font-size: 4rem;
-        color:purple;
-        text-align: center;
-
+        font-size: 100px;
+        font-weight: bolder;
+        color:#fff;
+        height: 100%;
+        width: 100%;
+        display: flex;
+        position: fixed;
+        align-items: center;
+        justify-content: center;
+        text-shadow: 2.5px 5px rgba(0, 255, 255, 0.582);
     }
 
 </style>
