--- a/challenges/level_3/index.html
+++ b/challenges/level_3/index.html
@@ -8,6 +8,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jura:wght@700&display=swap" rel="stylesheet">
+<!-- Fonts -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap" rel="stylesheet">
 
     <title>WASPCON</title>
 <!-- Favicon -->
@@ -18,13 +22,13 @@
     * {
     margin: 0;
     padding: 0;
-    font-family: 'Jura', sans-serif;
+    font-family: 'Kanit', sans-serif;
     }
 
     .bg { 
         min-height: 100vh;
         width: 100%;
-        background-image: url(/Background_image.jpg);
+        background-image: url(../images/hacker2.jpg);
         background-position:center;
         background-size:cover;
         position: absolute;
@@ -38,8 +42,9 @@
         position: fixed;
         align-items: center;
         justify-content: center;
-        color: #faf196; 
+        color: rgb(20, 175, 136); 
         font-size: 100px;
+        text-shadow:  5px 10px black;
     }
 
     </style>
