--- a/challenges/level_5/index.html
+++ b/challenges/level_5/index.html
@@ -20,9 +20,11 @@
         }
         img{
             position: absolute;
-    width: 30%;
-    left: 33%;
-    top: 20%;
+            text-shadow: 10px 20px black;
+            border-radius: 10%;
+            width: 30%;
+            left: 33%;
+            top: 20%;
   
         }
 
