--- a/challenges/level_9/index.html
+++ b/challenges/level_9/index.html
@@ -27,9 +27,14 @@
       }
       form {
         border: 3px solid white;
+        border-radius: 3px;
         width: 729px;
         position: relative;
         left: 425px;
+      }
+
+      img{
+        border-radius: 1%;
       }
       #image {
         width: 600px;
