--- a/challenges/level_12/index.html
+++ b/challenges/level_12/index.html
@@ -6,7 +6,7 @@
 <!-- Favicon -->
 <link rel="icon" href="../images/owasp-logo.png">
     <style>
-      Body {
+      body {
         font-family: Calibri, Helvetica, sans-serif;
 
         background-repeat: no-repeat;
