--- a/challenges/level_15/index2.html
+++ b/challenges/level_15/index2.html
@@ -5,12 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+<!-- Fonts -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap" rel="stylesheet">
+<!-- Favicon -->
+<link rel="icon" href="../images/owasp-logo.png">
+<!-- CSS -->
+<style>
+
+  *{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    /* position: absolute; */
+    font-family: 'Kanit', sans-serif;
+    color: white;
+  }
+
+  body{
+    background: linear-gradient(rgba(22, 22, 22, 0.466),rgba(89, 218, 241, 0.336)),url(../images/hacker4.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+ .content{
+   text-align: center;
+   min-height: 100vh;
+   font-size: 2rem;
+   padding-top:15%;
+ } 
+ 
+</style>
+
+
 </head>
 <body>
-    <div>
-     <h1>Welcome to the final stage!</h1>   
-   <div style="text-align: center;"> <img src="bg.jpeg" alt=""></div>  
-</div>
+    <div class="content">
+     <h1>Welcome to the final stage!</h1>    
+    </div>
 </body>
 <!-- Q29tbWFuZCBpbmplY3Rpb24gdXNpbmcgY21kIGlzIGEgZnVuIHRoaW5nIHRvIGRvIQ== -->
 </html>
