--- a/challenges/level_13/index.html
+++ b/challenges/level_13/index.html
@@ -46,7 +46,7 @@
 <body>
   <div class="content">
     <h1>Harder XSS</h1>
-    <form action="http://localhost/level_13/x.php" method="GET">
+    <form action="./x.php" method="GET">
       User the string <b>alert(FLAG)</b> <br>
       <input name="name"><br><br>
       <button type="submit">Check</button>
