--- a/challenges/level_7/index.html
+++ b/challenges/level_7/index.html
@@ -31,10 +31,10 @@
         width: 80%;
         position: relative;
       }
-      // #image {
+ /*      // #image {
 	//	display: inline-block
 	//	margin: auto;
-     // }
+     // } */
       input[type="text"],
       input[type="password"] {
         width: 100%;
@@ -96,7 +96,7 @@
     <script>
 
 
-      // generateId :: Integer -> String
+
 
       function generateId(len) {
         var arr = new Uint8Array((len || 40) / 2);
@@ -104,7 +104,7 @@
         return Array.from(arr, (dec)=>dec.toString(16).padStart(2, "0")).join("");
       }
 
-      // ceasarShift :: (String,Integer) -> String
+
 
       var caesarShift = function (str, amount) {
         if (amount < 0) {
@@ -131,7 +131,6 @@
         return output;
       };
 
-      //Onclick handler 
       validate = () => {
         var form = document.getElementById("theform");
         function handleForm(event) {
@@ -139,13 +138,15 @@
         }
         form.addEventListener("submit", handleForm);
         let username = document.getElementById("pc").value;
-
-   
-          if (caesarShift(username, 420) == "owasp") {
-            var id = generateId(20);
+          if (caesarShift(username, 446) == "PIzIpwIzIrJpeK") {
 
             document.getElementById("flag").innerHTML =
-              "Congratulations! Your flag is " + id;
+              "Congratulations! Your flag is your input encoded in format WASP{input}";
+        }
+        else{
+          
+          document.getElementById("flag").innerHTML =
+              "Wrong input! Try again";
         }
       };
     </script>
