--- a/challenges/level_7/index.html
+++ b/challenges/level_7/index.html
@@ -82,7 +82,7 @@
     </form>
     <p id="flag"></p>
 	<br>
-    <div id="image" style="text-align:center;">>
+    <div id="image" style="text-align:center;">
 	
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 270 270" height="261.507" width="261.493" xml:space="preserve">
   
