--- a/challenges/level_10/success.html
+++ b/challenges/level_10/success.html
@@ -34,7 +34,7 @@
                     Congratulations !!!!</br>
                     You have completed the level</br>
                     Here's your flag</br>
-                    WASP{CTF_NATAS256}
+                    WASP{CTF_256}
                     
                 </div.a>
                 <div class="col-lg-3 col-md-2"></div>
