--- a/challenges/level_9/index.html
+++ b/challenges/level_9/index.html
@@ -73,7 +73,7 @@
   </head>
   <body>
     <center><h1>Student Login Form</h1></center>
-    <form action="login.php" method="POST" id="theform">
+    <form action="./login.php" method="POST" id="theform">
       <div class="container">
         <label>Username : </label>
         <input
