--- a/challenges/level_6/index.html
+++ b/challenges/level_6/index.html
@@ -27,7 +27,7 @@
             }
         </style>
         
-        <!--RCUUM GAHQT VJGUV GICPQ ITCRJ AFGET ARVKQ PKUUV GIEVH-->
+        <!--sdvvnhb iru vwhjdqrjudskb lv  vwhjfwi-->
         
     </head>
     <body>
