--- a/challenges/level_11/index.html
+++ b/challenges/level_11/index.html
@@ -28,7 +28,7 @@
         echo "abc";
         ?>
         <div id="content">
-            <form action = "form.php" method = "get">
+            <form action = "./needlesearch.php" method = "get">
                 Find words containing: <input type="text" name="needle">
                 <input type="submit" name="submit" value="Search"><br><br>
             </form>
