--- a/challenges/level_13/index.html
+++ b/challenges/level_13/index.html
@@ -16,7 +16,7 @@
     box-sizing: border-box;
     /* position: absolute; */
     font-family: 'Kanit', sans-serif;
-    color: white;
+    /* color: white; */
   }
 
   body{
@@ -24,6 +24,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    color: white;
   }
 
  .content{
@@ -38,6 +39,9 @@
    font-size: 1.2rem;
  }
 
+.name{
+  color:black;
+}
 </style>
 
 
