--- a/challenges/level_13/index.html
+++ b/challenges/level_13/index.html
@@ -24,7 +24,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    color: white;
+    color: black;
   }
 
  .content{
